<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txdetaillogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtlogin"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/add_your_details_to_login"
        android:textColor="#7c7d7e" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txdetaillogin"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="#fc6011"
        android:textColorHint="#b6b7b7" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etemail"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/textfield"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="#fc6011"
        android:textColorHint="#b6b7b7" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etpassword"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/orangebutton"
        android:maxLength="16"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/txtforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlogin"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="#7c7d7e"

        />

    <TextView
        android:id="@+id/txtloginwith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtforgotpassword"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/or_login_with"
        android:textColor="#7c7d7e" />

    <Button
        android:id="@+id/btnfacbooklogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtloginwith"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bluebutton"
        android:drawableLeft="@drawable/facebook"
        android:text="Login With Facebook"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btngooglelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnfacbooklogin"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bluebutton"
        android:drawableLeft="@drawable/googlepluslogo"
        android:text="Login With Google+"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textColor="#7c7d7e" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sign_up"
            android:textColor="#fc6011" />
    </LinearLayout>

</RelativeLayout>