<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="10dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardpopularrestaurant"
                android:layout_width="match_parent"

                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/imgRestaurantImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/burger" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtpopularRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardpopularrestaurant"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/minute_by_tuk_tuk"
                android:textColor="#4a4b4d"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgRatingStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpopularRestaurantName"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_fillstarorange" />

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpopularRestaurantName"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@id/imgRatingStar"
                android:text="4.9"
                android:textColor="#fc6011" />

            <TextView
                android:id="@+id/txtTotalRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpopularRestaurantName"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/txtRating"
                android:text="@string/_124_ratings"
                android:textColor="#7c7d7e" />

            <TextView
                android:id="@+id/txtRestaurantType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpopularRestaurantName"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/txtTotalRating"
                android:text="@string/cafe"
                android:textColor="#7c7d7e" />

            <TextView
                android:id="@+id/txtRestaurantFoodType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtpopularRestaurantName"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/txtRestaurantType"
                android:text="@string/western_food"
                android:textColor="#7c7d7e" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>